--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://DevTuna-02.github.io/BookTable",
+  "homepage": "https://DevTuna-02.github.io/BookTable",
   "name": "booktable",
   "version": "0.1.0",
   "private": true,
